fix biz card layout on mobile

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -12,6 +12,9 @@
   .footer {
     font-size: .6em
   }
+  #biz-card {
+    float:left;
+  }
 }
 
 // Small devices (landscape phones, less than 768px)
