--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -205,3 +205,7 @@ h3 span {
     text-align: left;
   }
 }
+
+#biz-card {
+  float:right;
+}
